fix overflowing message table cells. fixes #304

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -177,6 +177,7 @@ h4 {
 	table-layout: fixed;
 	border-collapse: collapse;
 	width: 100%;
+    word-break: break-all;
 }
 
 .messages-message {
